# batguard

./: CMakeLists.txt  cppcheck.sh  readme.md
3Dcase/: batguardcase2.3mf  batguardcase2.gcode  bottom2.stl  singleChannelCase2.scad  top2.stl
include/: BatGuard.hpp  CapacityReader.hpp  ChargeProfiles.hpp  ConfigReader.hpp  LogWriter.hpp  ProfileSchedules.hpp  RelayDriver.hpp  SerialPort.hpp  StateFile.hpp  stringtools.hpp
install/: batguard.service  batguardsleep.service  config  enablebatguardservices.sh  enablerelayudevrules.sh  makeconfigfile.py  makeudevrule.py
src/: BatGuard.cpp  CapacityReader.cpp  ChargeProfiles.cpp  ConfigReader.cpp  LogWriter.cpp  ProfileSchedules.cpp  RelayDriver.cpp  SerialPort.cpp  StateFile.cpp  main.cpp  stringtools.cpp
tests/: configtest.conf  tests.cpp
